--- a/config.yml
+++ b/config.yml
@@ -1,3 +1,238 @@
-baseURL: http://example.org/
-languageCode: en-us
-title: My New Hugo Site
+baseURL: "https://nishu8.github.io/NishithBlog/"
+title: </Nishith>
+paginate: 5
+theme: PaperMod
+
+enableInlineShortcodes: true
+enableRobotsTXT: true
+buildDrafts: false
+buildFuture: false
+buildExpired: false
+enableEmoji: true
+googleAnalytics: UA-216819723-1
+
+minify:
+    disableXML: true
+    # minifyOutput: true
+
+# languages:
+#     en:
+#         languageName: "English"
+#         weight: 1
+#         menu:
+#             main:
+#                 - name: Archive
+#                   url: archives
+#                   weight: 5
+#                 - name: Search
+#                   url: search/
+#                   weight: 10
+#                 - name: Tags
+#                   url: tags/
+#                   weight: 10
+#                 - name: Categories
+#                   url: categories/
+#                   weight: 10
+
+#     fr:
+#         languageName: ":fr:"
+#         languageAltTitle: French
+#         weight: 2
+#         title: PaperModL2
+#         profileMode:
+#             enabled: true
+#             title: PaperMod
+#             # imageUrl: "#"
+#             # imageTitle: my image
+#             # imageWidth: 120
+#             # imageHeight: 120
+#             subtitle: "☄️ Fast | ☁️ Fluent | 🌙 Smooth | 📱 Responsive"
+#             buttons:
+#                 - name: Blog
+#                   url: posts
+#                 - name: Tags
+#                   url: tags
+#         menu:
+#             main:
+#                 - name: Archive
+#                   url: archives/
+#                   weight: 5
+#                 - name: Tags
+#                   url: tags
+#                   weight: 10
+#                 - name: Categories
+#                   url: categories
+#                   weight: 10
+#                 - name: Series
+#                   url: series
+#                   weight: 10
+#                 - name: NullLink
+#                   url: "#"
+#                 - name: NullLink2
+#                   url: "#"
+#                 - name: NullLink3
+#                   url: "#"
+
+#     fa:
+#         languagedirection: rtl
+#         weight: 3
+#         title: PaperMod RTL
+#         homeInfoParams:
+#             Title: "Hi there \U0001F44B"
+#             Content: Welcome to RTL layout
+#         menu:
+#             main:
+#                 - name: Tags
+#                   url: tags
+#                   weight: 10
+
+menu:
+  main:
+    # - name: Posts
+    #   url: home/
+    #   weight: 5
+    - name: Archive
+      url: archives
+      weight: 10
+    - name: Search
+      url: search/
+      weight: 15
+    # - name: Tags
+    #   url: tags/
+    #   weight: 10
+    # - name: Categories
+    #   url: categories/
+    #   weight: 10
+
+outputs:
+    home:
+        - HTML
+        - RSS
+        - JSON
+
+params:
+    env: production # to enable google analytics, opengraph, twitter-cards and schema.
+    description: "A Place to talk about about Technology, Data Science, Machine Learning, PC and Life"
+    author: Nishith
+    # author: ["Me", "You"] # multiple authors
+
+    defaultTheme: auto
+    # disableThemeToggle: true
+    ShowShareButtons: true
+    ShowReadingTime: true
+    # disableSpecial1stPost: true
+    # displayFullLangName: true
+    ShowPostNavLinks: true
+    ShowBreadCrumbs: true
+    ShowCodeCopyButtons: true
+    # ShowToc: true
+    # comments: false
+    # images: ["papermod-cover.png"]
+    cover:
+        responsiveImages: false
+
+    profileMode:
+        enabled: false
+        title: Nishith Choudhary
+        imageUrl: "https://images.unsplash.com/photo-1564865878688-9a244444042a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
+        imageTitle: my image
+        # imageWidth: 120
+        # imageHeight: 120
+        buttons:
+            - name: Posts
+              url: home
+            - name: Archives
+              url: archives
+            - name: Tags
+              url: tags
+
+    homeInfoParams:
+        Title: "Nishith's Blog"
+        Content: >
+            Welcome to the blogpost of maintained by Nishith.
+
+            - It is a place where I talk about Technology, Data Science, Machine Learning, PC and Life.
+
+    socialIcons:
+        - name: github
+          url: "https://github.com/nishu8"
+        - name: KoFi
+          url: "https://ko-fi.com/adityatelange"
+        - name: RsS
+          url: "index.xml"
+
+    editPost:
+        URL: "https://github.com/adityatelange/hugo-PaperMod/tree/exampleSite/content"
+        Text: "Suggest Changes" # edit text
+        appendFilePath: true # to append file path to Edit link
+
+    # label:
+    #     text: "Home"
+    #     icon: icon.png
+    #     iconHeight: 35
+
+    # analytics:
+    #     google:
+    #         SiteVerificationTag: "XYZabc"
+
+    # assets:
+    #     favicon: "<link / abs url>"
+    #     favicon16x16: "<link / abs url>"
+    #     favicon32x32: "<link / abs url>"
+    #     apple_touch_icon: "<link / abs url>"
+    #     safari_pinned_tab: "<link / abs url>"
+
+    # cover:
+    #     hidden: true # hide everywhere but not in structured data
+    #     hiddenInList: true # hide on list pages and home
+    #     hiddenInSingle: true # hide on single page
+
+    # fuseOpts:
+    #     isCaseSensitive: false
+    #     shouldSort: true
+    #     location: 0
+    #     distance: 1000
+    #     threshold: 0.4
+    #     minMatchCharLength: 0
+    #     keys: ["title", "permalink", "summary", "content"]
+
+taxonomies:
+    category: categories
+    tag: tags
+    series: series
+
+markup:
+    goldmark:
+        renderer:
+            unsafe: true
+#     highlight:
+#         # anchorLineNos: true
+#         codeFences: true
+#         guessSyntax: true
+#         lineNos: true
+#         # noClasses: false
+#         style: monokai
+
+privacy:
+    vimeo:
+        disabled: false
+        simple: true
+
+    twitter:
+        disabled: false
+        enableDNT: true
+        simple: true
+
+    instagram:
+        disabled: false
+        simple: true
+
+    youtube:
+        disabled: false
+        privacyEnhanced: true
+
+services:
+    instagram:
+        disableInlineCSS: true
+    twitter:
+        disableInlineCSS: true
