--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -8,7 +8,7 @@ on:
     #   - 'README.md'
     branches:
       - main
-  pull_requests:
+  pull_request:
   # workflow_dispatch:
     # manual run
 
